# strange-subshell

./: Cargo.toml  README.md  strace-bad.txt  strace-good.txt
src/: main.rs  shell_env.rs
