[package]
name = "strange-subshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4"
rustix = { version = "0.38.31", features = ["process"] }
libc = "0.2"
anyhow = "1.0.80"

[profile.release]
debug = true
